[GTK][WPE] Missing Exif Orientation support https://bugs.webkit.org/show_bug.cgi?id=95299

Reviewed by Carlos Alberto Lopez Perez.

Source/WebCore:

CairoOperations::drawSurface is not taking 90/270 degrees orientation
changes in account correctly.

As in these operations the size of the surfaces will be the same but
not exactly equal (by transposing width and height), drawSurface
currently wrongly presumes the need for some some padding. The same
happens to the scale factors.

Covered by existing tests.

* platform/graphics/cairo/CairoOperations.cpp:
(WebCore::Cairo::drawNativeImage): Forward usesWidthAsHeight to
drawSurface.
(WebCore::Cairo::drawSurface): use correct scaling/padding when
getting surfaces from images rotated 90/270 degrees.
* platform/graphics/cairo/CairoOperations.h: Add new enum to forward
Orientation.usesWidthAsHeight.

LayoutTests:

Update expectations after partial EXIF support

* platform/gtk/TestExpectations:
* platform/wpe/TestExpectations:


Canonical link: https://commits.webkit.org/230239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268176 268f45cc-cd09-0410-ab3c-d52691b4dbfc